--- a/index.html
+++ b/index.html
@@ -165,31 +165,7 @@
         </section>
         <!-- ========================= hero-section end ========================= -->
 
-        <!-- ========================= client-logo-section start ========================= -->
-        <section class="client-logo-section pt-100">
-            <div class="container">
-                <div class="client-logo-wrapper">
-                    <div class="client-logo-carousel d-flex align-items-center justify-content-between">
-                        <div class="client-logo">
-                            <img src="assets/img/client-logo/uideck-logo.svg" alt="">
-                        </div>
-                        <div class="client-logo">
-                            <img src="assets/img/client-logo/pagebulb-logo.svg" alt="">
-                        </div>
-                        <div class="client-logo">
-                            <img src="assets/img/client-logo/lineicons-logo.svg" alt="">
-                        </div>
-                        <div class="client-logo">
-                            <img src="assets/img/client-logo/graygrids-logo.svg" alt="">
-                        </div>
-                        <div class="client-logo">
-                            <img src="assets/img/client-logo/lineicons-logo.svg" alt="">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- ========================= client-logo-section end ========================= -->
+        
 
    <!-- ========================= feature-section start ========================= -->
         <section class="feature-section  text-center pt-130">
@@ -248,6 +224,45 @@
             </div>
         </section>
         <!-- ========================= feature-section end ========================= -->
+
+        <!-- ========================= client-logo-section start ========================= -->
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-12 text-center">
+                                <img src="assets/img/sponsor-logo.png">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+       <!--  <section class="client-logo-section pt-100">
+            <div class="container">
+                <div class="client-logo-wrapper">
+                    <div class="client-logo-carousel d-flex align-items-center justify-content-between">
+                        <div class="client-logo">
+                            <img src="assets/img/client-logo/uideck-logo.svg" alt="">
+                        </div>
+                        <div class="client-logo">
+                            <img src="assets/img/client-logo/pagebulb-logo.svg" alt="">
+                        </div>
+                        <div class="client-logo">
+                            <img src="assets/img/client-logo/lineicons-logo.svg" alt="">
+                        </div>
+                        <div class="client-logo">
+                            <img src="assets/img/client-logo/graygrids-logo.svg" alt="">
+                        </div>
+                        <div class="client-logo">
+                            <img src="assets/img/client-logo/lineicons-logo.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section> -->
+        <!-- ========================= client-logo-section end ========================= -->
 
            <!-- ========================= value of cs section start ========================= -->
         <section class="feature-section value-section text-center pt-130">
@@ -610,9 +625,14 @@
                 <div class="row">
                     <div class="col-12  about-solution-content">
                         <div class="row  justify-content-center ">
-                            <div class="col-md-5 col-12 about-solution-title  text-lg-start text-center  ">
-                                <h4 class="py-4 py-sm-4">CS Revolution memberi solusi yang cepat dan hemat dengan pemanfaatan Crowd Agent</h4>
+                            <div class="col-md-5 col-12  about-solution-title text-lg-start text-center  ">
+                                <div class="col-12 pt-lg-5 pt-0">
+                                 <div class="col-12 pt-lg-5 pt-0">  
+                                    <h4 class=" pt-lg-5 pt-0 ">CS Revolution memberi solusi yang cepat dan hemat dengan pemanfaatan Crowd Agent</h4>
                                     <p>Menjadi inovasi di tengah layanan CS konvensional yang bisa sangat menguras <strong>WAKTU</strong> & <strong>BIAYA</strong></p>
+                                </div>
+                                </div>
+                               
                             </div>
                             <div class="col-md-7 col-12  about-solution-img ">
                                 <img class="solutionimg " src="assets/img/solutionimg.png">
@@ -633,11 +653,15 @@
                 <div class="col-lg-12 col-12 about-social-content">
                     <div class="row text-lg-start text-center">
                         <div class="col-lg-5 col-12 about-social-title">
+                             <div class="col-12 pt-lg-5 pt-0 ">
+                                 <div class="col-12 pt-lg-5 pt-0 ">
                            <h4>Bisnis Meningkat Sambil Beri Manfaat Lewat Pemberdayaan Masyarakat</h4> 
-                            <p class="pt-4">Lebih dari sekedar menjalankan usaha, tapi juga menciptakan
+                            <p class="">Lebih dari sekedar menjalankan usaha, tapi juga menciptakan
                             dampak sosial yang bermakna. Lewat mitra social
                             empowerment kami, Anda bisa mendapatkan agent-agent
                                 terlatih sambil ikut berkontribusi mensejahterakan masyarakat.</p>
+                                </div>
+                            </div>    
                         </div>
                         <div class="col-lg-7 col-12 about-social-img">
                             <img src="assets/img/socialimpact-img.png" alt="">
